--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
-  "name": "create-rivas-react",
-  "version": "0.0.4",
+  "author": {
+    "name": "rivaslive"
+  },
+  "bin": {
+    "create-rivas-react": "index.js"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "chalk": "^5.0.1",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^8.2.4"
+  },
+  "deprecated": false,
   "description": "Boilerplate for create react with atomic design",
-  "author": "rivaslive",
-  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^17.0.42"
+  },
   "keywords": [
     "nodejs",
     "node",
@@ -14,22 +26,16 @@
     "node-cli",
     "reactjs"
   ],
-  "bin": {
-    "create-rivas-react": "index.js"
-  },
+  "license": "ISC",
   "main": "index.js",
+  "name": "create-rivas-react",
   "scripts": {
-    "start": "node index.js",
-    "patch-release": "npm version patch && npm publish && git push --follow-tags",
+    "deploy": "yarn git-commit && yarn git-push",
     "git-commit": "git add . && git commit -m \"rivas-cli update\"",
     "git-push": "git push origin master",
-    "deploy": "yarn git-commit && yarn git-push",
+    "patch-release": "npm version patch && npm publish && git push --follow-tags",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "fs-extra": "^10.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.42"
-  }
+  "version": "0.0.2"
 }
