--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "chalk": "^5.0.1",
-    "fs-extra": "^10.1.0",
-    "inquirer": "^8.2.4"
+    "chalk": "4.1.2",
+    "fs-extra": "10.1.0",
+    "inquirer": "8.2.4"
   },
   "deprecated": false,
   "description": "Boilerplate for create react with atomic design",
