--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "chalk": "4.1.2",
     "fs-extra": "10.1.0",
-    "inquirer": "8.2.4"
+    "inquirer": "8.2.4",
+    "node-emoji": "^1.11.0",
+    "semver": "7.3.7"
   },
   "deprecated": false,
   "description": "Boilerplate for create react with atomic design",
   "devDependencies": {
-    "@types/node": "^17.0.42"
+    "@types/node": "^17.0.42",
+    "prettier": "^2.6.2"
   },
   "keywords": [
     "nodejs",
