--- a/templates/vitejs/javascript/package.json
+++ b/templates/vitejs/javascript/package.json
@@ -5,10 +5,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format:check": "prettier --check .",
+    "format": "prettier --write .",
+    "fix-all": "yarn format && yarn lint:fix",
+    "test-all": "yarn format:check && yarn lint"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "classnames": "^2.3.1",
+    "rc-field-form": "^1.26.7",
+    "rc-util": "^5.21.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
@@ -19,10 +28,12 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.6.2",
     "rivas-cli": "^0.0.6",
