Fixed ts components

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,38 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
-    "allowJs": false,
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "incremental": true,
+    "noEmit": true,
     "esModuleInterop": true,
-    "moduleResolution": "Node",
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "preserve",
-    "baseUrl": "./src"
+    "incremental": true,
+    "baseUrl": "src"
   },
-  "include": [
-    "@types",
-    "node_modules/@types/**/*",
-    "src",
-    "next.config.js",
-    ".eslintrc.js"
-  ],
-  "exclude": ["node_modules"],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "@types", "src"],
+  "exclude": ["node_modules"]
 }
